fairchive-webapp/src/main/webapp/resources/vecler/theme-base.scss
/* ... */
@media screen and (min-width: $screen-sm-min) {
	.navbar-default #topNavBar #accessibility-controls {
			display: table-cell;
			vertical-align: middle;
			float: none;
			height: $navbar-height;

			> div {
				position: relative;
				bottom: 5px;
			}

			&::after {
				content: " ";
				position: absolute;
				left: 0;
				right: 0;
				bottom: 20px;
				height: 1px;
				background: #e8e8e8;
			}
	}
}

/* Accessibility controls */

.accessibility-controls-container {
	font-size: 15px;
	float: right;
	margin-right: 10px;
}

#accessibility-controls {
	position: relative;

	ul[id$="-mode-selector"] {
		margin: 0;
		padding: 0;
		display: inline-block;
		list-style-type: none;

		li {
			display: block;
			float: left;
			margin-left: 0.4em;

			button {
				position: relative;
				top: 0.5em;
				padding: 0.4em 0.2em;
				cursor: pointer;
				line-height: 12px;
			}
		}

		+ ul[id$="-mode-selector"] {
			margin-left: -0.25em;
		}
	}

    div {
        display: inline;
    }
	div:not(:last-child) ul[id$="-mode-selector"]:last-child {
		padding-right: 0.8em;
	}
}

@mixin accessibility-controls-mobile {
	#accessibility-controls {
		position: static;
		margin-left: -15px;
		margin-right: -15px;
		padding: 0;

		div {
			display: block;
			width: 100%;
			padding: 0 1.333em 0.667em;
		}
	}
}

@media screen and (max-width: $screen-xs-max) {
	@include accessibility-controls-mobile;
}

.selected-option-check {
	display: none;
}

@mixin mode-selector-checkmark-colors($text: $main-color, $background: #fff) {
	.selected-option-check:before {
		color: $text;
		text-shadow: 1px 1px $background, -1px 1px $background, 1px -1px $background, -1px -1px $background;
	}
}
@mixin mode-selector-checkmark {
	.selected-option-check {
		display: inline;

		&:before {
			content: "✔";
			position: absolute;
			top: 0.875em;
			left: 0.875em;
		}
	}

	@include mode-selector-checkmark-colors;
}

#eighty-limit-mode-selector button,
#wcag-text-mode-selector button {
	position: relative;
	border: 1px solid $main-text-color;
	background: #fff;
	color: $main-color;
	font-weight: bold;
	text-decoration: none;
	overflow: hidden;

	&::after {
		opacity: 0;
		content: "Aa";
	}
}
#eighty-limit-mode-selector button[aria-pressed="true"],
#wcag-text-mode-selector button[aria-pressed="true"] {
	color: $focus-color;

	@include mode-selector-checkmark;
}

#eighty-limit-mode-selector button::before {
	position: absolute;
	content: "80";
}
#wcag-text-mode-selector button::before {
	position: absolute;
	content: "==";
}

#font-size-mode-selector button {
	position: relative;
	border: 1px solid $main-text-color;
	background: #fff;
	color: $main-color;
	font-weight: bold;
	text-decoration: none;
	overflow: hidden;

	&::before {
		position: absolute;
		content: "A";
	}
	&::after {
		opacity: 0;
		content: "Aa";
	}

	&.default::before {
		left: 0.45em;
		line-height: 0.9em;
	}
	&.percent-150::before {
		left: 0.20em;
		font-size: 1.5em;
		line-height: 0.6em;
	}
	&.percent-200::before {
		content: "A";
		left: 0.07em;
		font-size: 2em;
		line-height: 0.47em;
	}
}

#high-contrast-mode-selector button {
	border: 1px solid $main-text-color;
	background: #fff;
	color: $main-color !important;
	font-weight: bold;
	text-decoration: none !important;
	overflow: hidden;

	&::before {
		content: "Aa";
	}
}

#high-contrast-mode-selector button[aria-pressed="true"] {
	@include mode-selector-checkmark;
}

#accessibility-controls button[aria-pressed="true"]:not(.toggle) {
	cursor: default;
}

/* Force navbar mobile mode on sm-md screen width */

@mixin force-navbar-mobile {
	.navbar-toggle {
		display: block;
	}

	.navbar-header {
		float: none;
	}

	.navbar-default #topNavBar {
		border-top: 1px solid $gray-border-color;

		&.navbar-collapse.collapse {
			display: none !important;

			&.in {
				display: block !important;
			}
		}

		.pull-right {
			width: 100%;
			float: none !important;
		}

		.navbar-nav {
			height: auto;
			margin: 7.5px -15px;
			display: block;

			> li, .navbar-left {
				float: none !important;
			}

			.open .dropdown-menu {
				position: static;
				float: none;
				width: auto;
				margin-top: 0;
				background-color: transparent;
				border: 0;
				-webkit-box-shadow: none;
				box-shadow: none;

				> li > a {
					line-height: 20px;

					&:focus, &:hover {
						background-image: none;
					}
				}

				.dropdown-header, > li > a, > li > form > a {
					padding: 0.667em 1em !important;
				}
			}
		}
	}

	@include accessibility-controls-mobile;

	.navbar-default #topNavBar .navbar-nav .open .dropdown-menu {
		.dropdown-header, > li > a, > li > form > a {
			padding: 0.667em 1em !important;
		}
	}

	.navbar-nav .open .dropdown-menu {
		position: static;
		float: none;
		width: 100%;
		margin-top: 0;
		background-color: transparent;
		box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
	}

	.navbar-default #topNavBar .navbar-nav .open .dropdown-menu {
		.dropdown-header, > li > a, > li > form > a {
			padding: 0.667em 1em !important;
		}
	}

	.navbar-nav .open .dropdown-menu {
		position: static;
		float: none;
		width: 100%;
		margin-top: 0;
		background-color: transparent;
		box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
	}

	.main-menu-container {
		float: none;
		text-align: left;
	}

	.accessibility-controls-container {
		float: none;
	}

	.navbar-default #topNavBar .navbar-nav > li {
		display: block;
	}

	.navbar-default #topNavBar #accessibility-controls::after {
		display: none;
	}

	@media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
		.main-menu-container {
			margin-left: 25px;
		}
	}

	@media screen and (min-width: $screen-md-min) {
		.main-menu-container {
			margin-left: 15px;
		}
	}
}

@media only screen and (hover: none) and (pointer: coarse) {
	@include force-navbar-mobile;

	body.navbar-expanded {
		overflow: hidden;
	}
}
/* ... */

